[project]
name = "comfyui-seamless-tiling"
description = "Node for generating almost seamless textures, based on similar setting from A1111."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/spinagon/ComfyUI-seamless-tiling"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-seamless-tiling"
Icon = ""
